Revert "Update to java 25 (#478)"
This reverts commit 82202c3557ca952c80b66b1e1e9eddd223bc717d.